--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="parent">
                 <div class="child"><img src="logo.jpg" alt="logo" ><p>Courses</p></div>
                 <div class="child">
-                    <a href="https://www.udemy.com/">Home</a>
+                    <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Contact</a>
                 </div>
